storage-iSCSI/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "apiProfile": "2019-03-01-hybrid",
  "parameters": {
    "WindowsImageSKU": {
      "defaultValue": "2019-Datacenter",
      "allowedValues": [ "2016-Datacenter","2019-Datacenter" ],
      "type": "string",
      "metadata": {
        "description": "Please select the base Windows VM image"
      }
    },   
    "VMSize": {
      "defaultValue": "Standard_F8s_v2",
      "allowedValues": [ "Standard_DS3_v2","Standard_DS4_v2","Standard_F8s_v2","Standard_F16s_v2" ],
      "type": "string",
      "metadata": {
        "description": "Please select the VM size"
      }
    },
    "adminUsername": {
      "defaultValue": "storadmin",
      "type": "string",
      "metadata": {
        "description": "The name of the Administrator of the new VMs"
      }
    },
    "adminPassword": {
      "defaultValue": "[subscription().subscriptionId]",
      "type": "securestring",
      "metadata": {
        "description": "The password for the Administrator account of the new VMs. Default value is subscription id"
      }
    },
    "VNetName": {
      "defaultValue":"Storage",
      "type": "string",
      "metadata": {
        "description": "The name of VNet.  This will be used to label the resources"
      }
    },
    "VNetAddressSpace": {
      "defaultValue":"10.10.0.0/23",
      "type": "string",
      "metadata": {
        "description": "Address Space for VNet"
      }
    },
    "VNetInternalSubnetName": {
      "defaultValue": "Internal",
      "type": "string",
      "metadata": {
        "description": "VNet Internal Subnet Name"
      }
    },
    "InternalVNetIP": {
      "defaultValue":"10.10.1.4",
      "type": "string",
      "metadata": {
        "description": "Static Address for the internal IP of the File Server. "
      }
    },
    "VNetTunnelSubnetRange": {
      "defaultValue":"10.10.0.0/24",
      "type": "string",
      "metadata": {
        "description": "Tunnel Subnet Range"
      }
    },
    "VNetInternalSubnetRange": {
      "defaultValue":"10.10.1.0/24",
      "type": "string",
      "metadata": {
        "description": "Address Range for VNet Internal Subnet"
      }      
    },  
    "_artifactsLocation": {
      "defaultValue": "https://raw.githubusercontent.com/Inttruder/azure-intelligent-edge-patterns/master/",
      "type": "string",
      "metadata": {
        "description": "The location of resources, such as templates and DSC modules, that the template depends on"
      }
    },
    "_artifactsLocationSasToken": {
      "defaultValue": "",
      "type": "securestring",
      "metadata": {
        "description": "Auto-generated token to access _artifactsLocation"
      }
    }
  },

  "variables": {
    "computeApiVersion": "2017-12-01",

    "WindowsImageSKU": "[parameters('WindowsImageSKU')]",
    "ExtensionName": "[concat(variables('VNetVMName'), '/CustomScriptExtension')]",
    "storageAccountType": "Standard_LRS",
    "ManagedOSDiskType": "Premium_LRS",
    "storageName": "[concat('sa', uniquestring(resourceGroup().id))]",
    "VMSize": "[parameters('VMSize')]",    
    "windowsImagePublisher": "MicrosoftWindowsServer",
    "windowsImageOffer": "WindowsServer",
    "windowsImageVersion": "latest",   
    "vmName": "-File",
    "VNetVMName": "[concat(resourcegroup().name,variables('vmName'))]",

    "VNet": "[parameters('VNetName')]",
    "VNetInternalSubnetName": "[parameters('VNetInternalSubnetName')]",
    "VNetAddressSpace": "[parameters('VNetAddressSpace')]",
    "VNetTunnelSubnetRange": "[parameters('VNetTunnelSubnetRange')]",
    "VNetInternalSubnetRange": "[parameters('VNetInternalSubnetRange')]",
    "InternalVNetIP": "[parameters('InternalVNetIP')]",
    
    "iSCSISubnetName": "iSCSI",            
    "VNetName": "[concat(variables('VNet'),'-vnet' )]",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]",
    "TunnelSubnetRefVNet": "[concat(variables('vnetID'),'/subnets/',variables('iSCSISubnetName'))]",
    "InternalSubnetRefVNet": "[concat(variables('vnetID'),'/subnets/',variables('VNetInternalSubnetName'))]",
    "TunnelnsgName": "[concat(parameters('VNetName'),'-',variables('iSCSISubnetName'),'-nsg' )]",
    "TunnelnsgID": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('TunnelnsgName'))]",    
    "NICPrefixVNet": "Storage",
    "VNetTunnelPIPName1": "[concat(variables('VNet'),'-',variables('iSCSISubnetName'),'-pip1')]",  
    "VNetTunnelPIPName2": "[concat(variables('VNet'),'-',variables('iSCSISubnetName'),'-pip2')]",    

    "ConfigureVMDSC": "[concat(parameters('_artifactsLocation'), 'DSC/ConfigureVM.zip', parameters('_artifactsLocationSasToken'))]",
    "ConfigureVM": "ConfigureVM.ps1\\ConfigureVM",

    "scriptfilename": "ConfigureVM.ps1",
    "scriptfilepath": "[concat(parameters('_artifactsLocation'), variables('scriptfilename'), parameters('_artifactsLocationSasToken'))]"
  },

  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('TunnelnsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "500UDP",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "500",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "4500UDP",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "4500",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "860iSCSI",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "860",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "3260iSCSI",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3260",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "[variables('storageAccountType')]"
      },
      "kind": "Storage"    
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('VNetName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('VNetAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('iSCSISubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VNetTunnelSubnetRange')]",
              "networkSecurityGroup": {
                "id": "[variables('TunnelnsgID')]"
              }              
            }
          },
          {
            "name": "[variables('VNetInternalSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VNetInternalSubnetRange')]"
              }
            }
        ]
      },
      "dependsOn": [
        "[variables('TunnelnsgID')]"
      ]
    }, 
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('VNetTunnelPIPName1')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Static"
      },
      "dependsOn": [
        "[variables('vnetID')]"
      ]
    },
     {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('VNetTunnelPIPName2')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Static"
      },
      "dependsOn": [
        "[variables('vnetID')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic1')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,  
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetTunnelPIPName1'))]"
              },
              "subnet": {
                "id": "[variables('TunnelSubnetRefVNet')]"
              }          
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID')]",
        "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetTunnelPIPName1'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic2')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,  
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetTunnelPIPName2'))]"
              },
              "subnet": {
                "id": "[variables('TunnelSubnetRefVNet')]"
              }          
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID')]",
        "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetTunnelPIPName2'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet'),'-', variables('VNetInternalSubnetName'),'-nic')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('InternalVNetIP')]",
              "subnet": {
                "id": "[variables('InternalSubnetRefVNet')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[concat(variables('VNetVMName'))]",
      "location": "[resourceGroup().location]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
      },
      "osProfile": {
        "computerName": "[concat(variables('VNetVMName'))]",
        "adminUsername": "[parameters('adminUsername')]",
        "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
      },
      "storageProfile": { 
        "imageReference": {
          "publisher": "[variables('windowsImagePublisher')]",
          "offer": "[variables('windowsImageOffer')]",
          "sku": "[variables('windowsImageSKU')]",
          "version": "[variables('windowsImageVersion')]"
        },
        "osDisk": {
          "name": "[concat(variables('VNetVMName'), '1-osdisk')]",
          "managedDisk": {
            "storageAccountType": "[variables('ManagedOSDiskType')]"
          }, 
          "caching": "ReadWrite",
          "createOption": "FromImage"
          }
        },        
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic1'))]"
            },
            {
              "properties": {
                "primary": false
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic2'))]"
            },
            {
              "properties": {
                "primary": false
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-', variables('VNetInternalSubnetName'),'-nic'))]"
            }
          ]
        },
        "licenseType": "Windows_Server",
          "diagnosticsProfile": {
          "bootDiagnostics": {
              "enabled": true,
              "storageUri": "[reference(resourceId(resourcegroup().name, 'Microsoft.Storage/storageAccounts', variables('storageName')), '2015-06-15').primaryEndpoints['blob']]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic1'))]",
        "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic2'))]",
        "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'), '-', variables('VNetInternalSubnetName'),'-nic'))]",
        "[resourceId('Microsoft.Storage/storageAccounts',concat(variables('storageName')))]"
      ]       
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('VNetVMName'), '/CustomScriptExtension')]",
      "apiversion": "[variables('computeApiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.8",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
              "[variables('scriptFilepath')]"
          ],
          "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -file ',variables('scriptFilename') )]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines',concat(concat(variables('VNetVMName'))))]"
      ]     
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('VNetVMName'), '/ConfigureVM')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "ConfigureVM"
      },
      "properties": {
        "publisher": "Microsoft.Powershell",
        "type": "DSC",
        "typeHandlerVersion": "2.77",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "modulesUrl": "[variables('ConfigureVMDSC')]",
          "configurationFunction": "[variables('ConfigureVM')]"
        },
        "protectedSettings": {
          "Items": {
          }
        }
      },
      "dependsOn": [
         "[resourceId('Microsoft.Compute/virtualMachines/extensions',variables('VNetVMName'), 'CustomScriptExtension')]"
      ]
    }
  ],
  "outputs": {
     "VMName": {
      "type": "string",
      "value": "[variables('VNetVMName')]"
    },
    "StorageEndpoint1": {
        "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('VNetTunnelPIPName1')), '2016-03-30').ipaddress]",
        "type" : "string"
    },
    "StorageEndpoint2": {
        "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('VNetTunnelPIPName2')), '2016-03-30').ipaddress]",
        "type" : "string"
    },
    "LocalVNetAddressSpace": {
      "type": "string",
      "value": "[variables('VNetAddressSpace')]"
    },
    "adminUsername": {
      "type": "string",
      "value": "[parameters('adminUsername')]"
    },
    "VNet": {
      "type": "string",
      "value": "[variables('VNetName')]"
    },
    "InternalRefVNet":{
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]"
    },
    "VNetInternalSubnetName": {
      "type": "string",
      "value": "[variables('VNetInternalSubnetName')]"
    },
    "InternalSubnetRefVNet":{
      "type": "string",
      "value": "[variables('InternalSubnetRefVNet')]"
    },
    "InternalSubnetIP":{
      "type": "string",
      "value": "[variables('InternalVNetIP')]"
    }
  }
}
